--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "browser-sync": "^2.26.4",
     "browserify": "^16.2.3",
     "globby": "^9.2.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^1.0.4",
     "gulplog": "^1.0.0",
     "through2": "^3.0.1",
     "vinyl-buffer": "^1.0.1",
