--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "autoprefixer": "^9.5.1",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.1",
+    "gulp-data": "^1.3.1",
+    "gulp-front-matter": "^1.3.0",
     "gulp-imagemin": "^5.0.3",
     "gulp-newer": "^1.4.0",
     "gulp-noop": "^1.0.0",
