--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-strip-comments": "^2.5.2",
     "gulp-uglify-es": "^1.0.4",
+    "gulp-webp": "^4.0.1",
     "gulplog": "^1.0.0",
     "through2": "^3.0.1",
     "vinyl-buffer": "^1.0.1",
